@@ -50,7 +50,7 @@ sub _process
         return;
     }
 
-    my $qaUpdates = 0;
+    my $qaUpdates = (-f '/etc/apt/sources.list.d/zentyal-qa.list');
     my $ignore = EBox::Config::boolean('widget_ignore_updates');
 
     my $updatesStr = __('No updates');
