@@ -1,4 +1,5 @@
 HEAD
+	+ Display commercial edition license info in Server Edition
 	+ Proper management of development/commercial repos
 	+ Show warning in header when license or trial is expired
 	+ Recognise new 5-year commercial license type without support
